--- a/css/style.css
+++ b/css/style.css
@@ -1006,8 +1006,9 @@ button.reset-btn:hover {
     border: 2px solid #000000;
     border-radius: 12px;
     width: 90%;
-    max-width: 600px;
+    max-width: 700px;
     align-items: center;
+    font-size: 24px;
 }
 
 .settings-left-contents {
